# catchmytask

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-02  LICENSE  README.MD  README.md  ansible.cfg  components.json  dfsf  docker-compose.yml  hosts.yml  install.sh  next.config.js  package-lock.json  package.json  playbook-sst.yml  remove-unused-deps.sh  tailwind.config.js  test_incremental.js  test_parser.js  tree-sitter-nstl.wasm  tree-sitter.json  tsconfig.json
.cmt/: .gitignore  ABOUT.md  CONVENTIONS.md  config.yml
.cmt/archive/: CMT-1.md
.cmt/items/: CMT-1.md
.github/workflows/: catchmytask.yml  ci.yml  deploy-site.yml  release.yml
crates/cmt-cli/: Cargo.toml
crates/cmt-cli/src/: cli.rs  main.rs  webhooks.rs
crates/cmt-cli/src/commands/: add.rs  archive.rs  bulk.rs  check.rs  comment.rs  completions.rs  config_cmd.rs  delete.rs  doctor.rs  done.rs  edit.rs  help_agent.rs  init.rs  list.rs  log_cmd.rs  mod.rs  projects.rs  reindex.rs  search.rs  serve.rs  setup.rs  show.rs  slugify.rs  status.rs  view.rs  webhook.rs
crates/cmt-cli/src/mcp/: server.rs  tools.rs
crates/cmt-cli/tests/: cli_test.rs
crates/cmt-core/: Cargo.toml
crates/cmt-core/src/: artifacts.rs  comments.rs  discovery.rs  error.rs  git.rs  index.rs  lib.rs  model.rs  template.rs  views.rs  webhooks.rs
docs/design/: agent-discoverability.md  artifacts.md  command-bar.md  multi-project.md  web-ui-research.md  web-ui-screens.md
docs/guides/: multi-context-workflow.md
docs/research/: 01-industry-landscape.md  02-first-principles.md  03-enterprise-and-open-core.md  03-open-core-code-separation.md  04-strategy-and-roadmap.md  competitive-landscape-2026.md
docs/specs/: 01-work-item-schema.md  02-state-machine.md  03-cli-interface.md  04-config-format.md  05-sqlite-index.md
integrations/: README.md
integrations/claude-code/: SKILL.md
pages/: [...catchAll].tsx  _app.tsx  _app_old.tsx  index.tsx  signin.tsx
pages/action_control/: index.tsx  interfaces.ts
pages/activities/: index.tsx
pages/airlines/: index.tsx  interfaces.ts
pages/api/: runtime-config.js
pages/applications/: [id].tsx
pages/artist/: index.tsx
pages/automations/: index.tsx
pages/blog-posts/: index.tsx
pages/caesars_bookings/: IncludeColumns.tsx  index.tsx  (+1 more)
public/: manifest.json
src/: access-control-provider.ts  artifacts.rs  cli.rs  config.js  config.rs  db.ts  error.rs  format.rs  lib.rs  localDb.ts  local_db.js  local_db_surrealdb.js  main.rs  parser.rs  registry.rs  slug.rs  state_machine.rs  storage.rs  store.js  surreal.ts  utils.js  utils.ts
styles/: globals.css
tests/: cli_test.rs
tree-sitter-nstl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar-01.js  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-nstl/bindings/c/: tree-sitter-nstl.pc.in
tree-sitter-nstl/bindings/go/: binding.go  binding_test.go
tree-sitter-nstl/bindings/node/: binding.cc  index.js
tree-sitter-nstl/bindings/python/tests/: test_binding.py
tree-sitter-nstl/bindings/python/tree_sitter_nstl/: __init__.py  binding.c
tree-sitter-nstl/bindings/rust/: build.rs  lib.rs
tree-sitter-nstl/bindings/swift/TreeSitterNstl/: nstl.h
tree-sitter-nstl/bindings/swift/TreeSitterNstlTests/: TreeSitterNstlTests.swift
tree-sitter-nstl/src/: grammar.json  node-types.json  parser.c
types/: next-auth.d.ts
web/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
(+633 files in other folders)
