[package]
name = "catchmytask"
version = "0.1.1"
edition = "2021"
description = "A work management system for humans and agents — CatchMyTask"

[[bin]]
name = "cmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
sha2 = "0.10"
thiserror = "2"
tabled = "0.17"
owo-colors = "4"
is-terminal = "0.4"
tempfile = "3"

# Web server (work serve)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
notify = "7"
tokio-tungstenite = "0.26"
futures-util = "0.3"
include_dir = "0.7"
open = "5"
mime_guess = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
