[package]
name = "cmt-cli"
version = "0.2.2"
edition = "2021"
description = "A work management system for humans and agents — CatchMyTask"
license = "MIT"
repository = "https://github.com/syncropic/catchmytask"

[[bin]]
name = "cmt"
path = "src/main.rs"

[dependencies]
cmt-core = { path = "../cmt-core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
is-terminal = "0.4"

# Web server (cmt serve)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
notify = "7"
tokio-tungstenite = "0.26"
futures-util = "0.3"
include_dir = "0.7"
open = "5"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
