[package]
name = "cmt-core"
version = "0.2.2"
edition = "2021"
description = "Core library for CatchMyTask — work management for humans and agents"
license = "MIT"
repository = "https://github.com/syncropic/catchmytask"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
sha2 = "0.10"
thiserror = "2"
tabled = "0.17"
owo-colors = "4"
tempfile = "3"
mime_guess = "2"
